[gd_scene load_steps=7 format=2]

[ext_resource path="res://Pictures/UI/OptionsBackground1.png" type="Texture" id=1]
[ext_resource path="res://UI/PauseScene.gd" type="Script" id=2]
[ext_resource path="res://UI/Mainbutton.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Fade_scene_change.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/Transylv.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_char = 3
font_data = ExtResource( 5 )

[node name="PauseScene" type="Node2D"]
pause_mode = 2
z_index = 1
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.956863 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )
offset = Vector2( 474.733, 210.394 )

[node name="Label" type="Label" parent="."]
margin_left = 174.0
margin_top = -102.0
margin_right = 392.0
margin_bottom = -35.0
rect_min_size = Vector2( 218, 67 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.521569, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Paused"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -18.0
margin_right = 693.0
margin_bottom = 376.0
rect_scale = Vector2( 0.85, 0.85 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 179.0
margin_right = 532.0

[node name="Label" parent="VBoxContainer/PlayButton" index="1"]
text = "Back"

[node name="OptionsButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 179.0
margin_top = 95.0
margin_right = 532.0
margin_bottom = 160.0

[node name="Label" parent="VBoxContainer/OptionsButton" index="1"]
text = "Options"

[node name="MenuButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 179.0
margin_top = 190.0
margin_right = 532.0
margin_bottom = 255.0

[node name="Label" parent="VBoxContainer/MenuButton" index="1"]
text = "Menu"

[node name="ExitButton" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_left = 179.0
margin_top = 285.0
margin_right = 532.0
margin_bottom = 350.0

[node name="Label" parent="VBoxContainer/ExitButton" index="1"]
text = "Exit"

[node name="FadeEffect" parent="." instance=ExtResource( 4 )]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]

[editable path="VBoxContainer/PlayButton"]
[editable path="VBoxContainer/OptionsButton"]
[editable path="VBoxContainer/MenuButton"]
[editable path="VBoxContainer/ExitButton"]
[editable path="FadeEffect"]
